build/log/idf_py_stdout_output_4701
Command: ninja all
[1/13] Performing build step for 'bootloader'
[1/1] cd /Users/zulin/Dev/sleepclock/build/bootloader/esp-idf/esptool_py && /Users/zulin/.espressif/python_env/idf5.5_py3.14_env/bin/python /Users/zulin/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/zulin/Dev/sleepclock/build/bootloader/bootloader.bin
Bootloader binary size 0x51e0 bytes. 0x2e20 bytes (36%) free.
[2/13] No install step for 'bootloader'
[3/13] Completed 'bootloader'
[4/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ssd1322_driver.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ssd1322_driver.c.obj 
/Users/zulin/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20251107/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.3\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/zulin/Dev/sleepclock/build/config -I/Users/zulin/Dev/sleepclock/main -I/Users/zulin/esp/esp-idf/components/newlib/platform_include -I/Users/zulin/esp/esp-idf/components/freertos/config/include -I/Users/zulin/esp/esp-idf/components/freertos/config/include/freertos -I/Users/zulin/esp/esp-idf/components/freertos/config/riscv/include -I/Users/zulin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/zulin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/zulin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/zulin/esp/esp-idf/components/freertos/esp_additions/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/zulin/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/Users/zulin/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/zulin/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/Users/zulin/esp/esp-idf/components/esp_hw_support/port/esp32c3/include -I/Users/zulin/esp/esp-idf/components/heap/include -I/Users/zulin/esp/esp-idf/components/heap/tlsf -I/Users/zulin/esp/esp-idf/components/log/include -I/Users/zulin/esp/esp-idf/components/soc/include -I/Users/zulin/esp/esp-idf/components/soc/esp32c3 -I/Users/zulin/esp/esp-idf/components/soc/esp32c3/include -I/Users/zulin/esp/esp-idf/components/soc/esp32c3/register -I/Users/zulin/esp/esp-idf/components/hal/platform_port/include -I/Users/zulin/esp/esp-idf/components/hal/esp32c3/include -I/Users/zulin/esp/esp-idf/components/hal/include -I/Users/zulin/esp/esp-idf/components/esp_rom/include -I/Users/zulin/esp/esp-idf/components/esp_rom/esp32c3/include -I/Users/zulin/esp/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/Users/zulin/esp/esp-idf/components/esp_rom/esp32c3 -I/Users/zulin/esp/esp-idf/components/esp_common/include -I/Users/zulin/esp/esp-idf/components/esp_system/include -I/Users/zulin/esp/esp-idf/components/esp_system/port/soc -I/Users/zulin/esp/esp-idf/components/esp_system/port/include/riscv -I/Users/zulin/esp/esp-idf/components/esp_system/port/include/private -I/Users/zulin/esp/esp-idf/components/riscv/include -I/Users/zulin/esp/esp-idf/components/lwip/include -I/Users/zulin/esp/esp-idf/components/lwip/include/apps -I/Users/zulin/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/zulin/esp/esp-idf/components/lwip/lwip/src/include -I/Users/zulin/esp/esp-idf/components/lwip/port/include -I/Users/zulin/esp/esp-idf/components/lwip/port/freertos/include -I/Users/zulin/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/zulin/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/zulin/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/zulin/Dev/sleepclock/managed_components/lvgl__lvgl -I/Users/zulin/Dev/sleepclock/managed_components/lvgl__lvgl/src -I/Users/zulin/Dev/sleepclock/managed_components -I/Users/zulin/Dev/sleepclock/managed_components/lvgl__lvgl/examples -I/Users/zulin/Dev/sleepclock/managed_components/lvgl__lvgl/demos -I/Users/zulin/esp/esp-idf/components/driver/deprecated -I/Users/zulin/esp/esp-idf/components/driver/i2c/include -I/Users/zulin/esp/esp-idf/components/driver/touch_sensor/include -I/Users/zulin/esp/esp-idf/components/driver/twai/include -I/Users/zulin/esp/esp-idf/components/esp_pm/include -I/Users/zulin/esp/esp-idf/components/esp_ringbuf/include -I/Users/zulin/esp/esp-idf/components/esp_driver_gpio/include -I/Users/zulin/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/zulin/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/zulin/esp/esp-idf/components/esp_driver_spi/include -I/Users/zulin/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/zulin/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/zulin/esp/esp-idf/components/esp_driver_i2s/include -I/Users/zulin/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/zulin/esp/esp-idf/components/sdmmc/include -I/Users/zulin/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/zulin/esp/esp-idf/components/esp_driver_sdio/include -I/Users/zulin/esp/esp-idf/components/esp_driver_dac/include -I/Users/zulin/esp/esp-idf/components/esp_driver_rmt/include -I/Users/zulin/esp/esp-idf/components/esp_driver_tsens/include -I/Users/zulin/esp/esp-idf/components/esp_driver_sdm/include -I/Users/zulin/esp/esp-idf/components/esp_driver_i2c/include -I/Users/zulin/esp/esp-idf/components/esp_driver_uart/include -I/Users/zulin/esp/esp-idf/components/vfs/include -I/Users/zulin/esp/esp-idf/components/esp_driver_ledc/include -I/Users/zulin/esp/esp-idf/components/esp_driver_parlio/include -I/Users/zulin/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/zulin/esp/esp-idf/components/esp_driver_twai/include -I/Users/zulin/esp/esp-idf/components/esp_timer/include -I/Users/zulin/esp/esp-idf/components/esp_http_client/include -I/Users/zulin/esp/esp-idf/components/esp_event/include -I/Users/zulin/esp/esp-idf/components/nvs_flash/include -I/Users/zulin/esp/esp-idf/components/esp_partition/include -I/Users/zulin/esp/esp-idf/components/esp_wifi/include -I/Users/zulin/esp/esp-idf/components/esp_wifi/include/local -I/Users/zulin/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/zulin/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/zulin/esp/esp-idf/components/esp_phy/include -I/Users/zulin/esp/esp-idf/components/esp_phy/esp32c3/include -I/Users/zulin/esp/esp-idf/components/esp_netif/include -I/Users/zulin/esp/esp-idf/components/json/cJSON -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/zulin/Dev/sleepclock=. -fmacro-prefix-map=/Users/zulin/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ssd1322_driver.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/ssd1322_driver.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ssd1322_driver.c.obj -c /Users/zulin/Dev/sleepclock/main/ssd1322_driver.c
/Users/zulin/Dev/sleepclock/main/ssd1322_driver.c: In function 'ssd1322_flush_framebuffer':
/Users/zulin/Dev/sleepclock/main/ssd1322_driver.c:37:19: error: implicit declaration of function 'lvgl_get_framebuffer' [-Wimplicit-function-declaration]
   37 |     uint8_t *fb = lvgl_get_framebuffer();
      |                   ^~~~~~~~~~~~~~~~~~~~
/Users/zulin/Dev/sleepclock/main/ssd1322_driver.c:37:19: error: initialization of 'uint8_t *' {aka 'unsigned char *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
[5/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ui_wrapper.c.obj
[6/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[7/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/screen_mgr.c.obj
[8/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/lvgl_adapter.c.obj
/Users/zulin/Dev/sleepclock/main/lvgl_adapter.c: In function 'lvgl_draw_text':
/Users/zulin/Dev/sleepclock/main/lvgl_adapter.c:288:25: warning: multi-character character constant [-Wmultichar]
  288 |         } else if (c == '°') {
      |                         ^~~
/Users/zulin/Dev/sleepclock/main/lvgl_adapter.c:288:22: warning: comparison is always false due to limited range of data type [-Wtype-limits]
  288 |         } else if (c == '°') {
      |                      ^~
ninja: build stopped: subcommand failed.
